--- a/css/index.css
+++ b/css/index.css
@@ -188,7 +188,7 @@ a.text-white-link:active {
 	color: #E61231 !important;
 	font-weight: bold;
 }
-.aboutme{
+.aboutmey{
   margin-left: 5px;
   margin-right: 5px;
   text-emphasis-color: blue;
