--- a/css/index.css
+++ b/css/index.css
@@ -188,9 +188,9 @@ a.text-white-link:active {
 	color: #E61231 !important;
 	font-weight: bold;
 }
-section.aboutmey{
+/* section.aboutmey{
   margin-left: 5px;
   margin-right: 5px;
   text-emphasis-color: blue;
   background-color: orange;
-}
+} */
