--- a/css/index.css
+++ b/css/index.css
@@ -195,7 +195,10 @@ a.text-white-link:active {
   background-color: orange;
 }
 .img-what{
- height: 20px;
- width: 10px;
+  margin-left: 0px;
+ height: 5px;
+ width: 5px;
  opacity: 1.5;
+ border-radius:50%;
+
 }
