--- a/css/index.css
+++ b/css/index.css
@@ -194,9 +194,10 @@ a.text-white-link:active {
   text-emphasis-color: blue;
   background-color: orange;
 }
-.img-what{
+a.img-what{
+  background: lightblue;
   margin-left: 0px;
- height: 5px;
+ height: 1px;
  width: 5px;
  opacity: 1.5;
  border-radius:50%;
