--- a/css/index.css
+++ b/css/index.css
@@ -194,7 +194,7 @@ a.text-white-link:active {
   text-emphasis-color: blue;
   background-color: orange;
 }
-a.img-what{
+.img-what{
   background: lightblue;
   margin-left: 0px;
  height: 1px;
