--- a/css/index.css
+++ b/css/index.css
@@ -195,11 +195,11 @@ a.text-white-link:active {
   background-color: orange;
 }
 .img-what{
-  background: lightblue;
-  margin-left: 0px;
- height: 1px;
- width: 5px;
- opacity: 1.5;
- border-radius:50%;
+  
+  margin-left: 0px !important;
+ height: 1px !important;
+ width: 5px !important;
+ opacity: 1.5 !important;
+ border-radius:50% !important;
 
 }
